--- a/index.html
+++ b/index.html
@@ -3,36 +3,62 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="icon" href="assets/images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
-  <title>Four card section</title>
+  <link rel="stylesheet" href="assets/css/main.css">
+  <title>Four cards section</title>
 </head>
 <body>
-  <div class="main">
+  <main>
     <div class="paragraph">
-      <p>Reliable, efficient delivery</p>
+      <p id="p-1">Reliable, efficient delivery</p>
       <h1>Powered by Technology</h1>
-      <p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+      <p id="p-2">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
     </div>
-    <div class="cards">
-      <div class="card card1">
-        <h2>Supervisor</h2>
-        <p>Monitors activity to identify project roadblocks</p>
+    <div class="cards-section">
+      <div class="cards card1">
+        <div class="colored-area"></div>
+        <div class="cards-content">
+          <h2 class="card-header">Supervisor</h2>
+          <p class="card-paragraph">Monitors activity to identify project roadblocks</p>
+          <div class="icon">
+            <img src="assets/images/icon-supervisor.svg" alt="Supervisor Icon">
+          </div>
+        </div>
       </div>
-      <div class="card card2">
-        <h2>Team Builder</h2>
-        <p>Scans our talent network to create the optimal team for your project</p>
+      <div class="card-group">
+        <div class="cards card2">
+          <div class="colored-area"></div>
+          <div class="cards-content">
+            <h2 class="card-header">Team Builder</h2>
+            <p class="card-paragraph">Scans our talent network to create the optimal team for your project</p>
+            <div class="icon">
+              <img src="assets/images/icon-team-builder.svg" alt="Team Builder Icon">
+            </div>
+          </div>
+        </div>
+        <div class="cards card3">
+          <div class="colored-area"></div>
+          <div class="cards-content">
+            <h2 class="card-header">Karma</h2>
+            <p class="card-paragraph">Regularly evaluates our talent to ensure quality</p>
+            <div class="icon">
+              <img src="assets/images/icon-karma.svg" alt="Karma Icon">
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="card card3">
-        <h2>Karma</h2>
-        <p>Regularly evaluates our talent to ensure quality</p>
-      </div>
-      <div class="card card4">
-        <h2>Calculator</h2>
-        <p>Uses data from past projects to provide better delivery estimates</p>
+      <div class="cards card4">
+        <div class="colored-area"></div>
+        <div class="cards-content">
+          <h2 class="card-header">Calculator</h2>
+          <p class="card-paragraph">Uses data from past projects to provide better delivery estimates</p>  
+          <div class="icon">
+            <img src="assets/images/icon-calculator.svg" alt="Calculator Icon">
+          </div>
+        </div>
       </div>
     </div>
-  </div>
+  </main>
 </body>
 </html>
